# student-interaction-data-generation

./: .gitignore  LICENSE  README.md  main.py  ontology_instances.ttl  output.ttl  pyproject.toml
.streamlit/: config.toml
data/: interaction_data.csv  metrics_simulation_data_100u_100d.csv  metrics_simulation_data_100u_200d.csv  metrics_simulation_data_100u_200d_r.csv  metrics_simulation_data_200u_200d.csv  metrics_simulation_data_50u_200d.csv  metrics_simulation_data_50u_400d.csv  nodes.csv  normalised_results.csv  relations.csv  simulation_data_100u_100d.csv  simulation_data_50u_200d copy.csv  simulation_data_50u_200d.csv
ontology/: inferredontology.ttl  ontologia_avia.ttl  ontologia_avia_with_instances_copy.ttl  ontology-test.jsonld  ontology-test.rdf  ontology-test.ttl
src/: accuracy.py  app.py  correlation.py  count_edges_nodes.py  draw.py  dynamic_graph.py  experiments.py  graph.py  graph2.py  instances_rdf.py  main.py  metrics.py
