[tool.poetry]
name = "student-interaction-data-generation"
version = "0.1.0"
description = ""
authors = ["Carolina Dias <carolina.dias.ai@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^24.11.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
