[tool.poetry]
name = "student-interaction-data-generation"
version = "0.1.0"
description = ""
authors = ["Carolina Dias <carolina.dias.ai@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^24.11.0"
pandas = "^2.2.2"
networkx = "^3.3"
matplotlib = "^3.8.4"
pygame = "^2.5.2"
scikit-learn = "^1.4.2"
dynetx = "^0.3.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
